# aegis-nexus1

./: .gcloudignore  .gitignore  DEPLOYMENT_GUIDE.md  README.md  RUN_GUIDE.md  cloudbuild.yaml  docker-compose.yml
db/: schema.sql
services/backend/: .env.example  Dockerfile  package-lock.json  package.json
services/backend/prisma/: schema.prisma  seed.js
services/backend/src/: index.js
services/backend/src/middleware/: auth.js
services/backend/src/routes/: analytics.js  announcements.js  auth.js  dashboard.js  dispatch.js  document.js  gemini.js  knowledge.js  notifications.js  translate.js  voice.js  volunteerRegister.js  volunteers.js
services/backend/src/services/: agent.js  matcherClient.js  translation.js
services/frontend/: .env.local.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
services/frontend/src/: global.d.ts
services/frontend/src/app/: ClientWrapper.tsx  globals.css  layout.tsx  page.tsx
services/frontend/src/app/agents/: page.tsx
services/frontend/src/app/analytics/: page.tsx
services/frontend/src/app/announcements/: page.tsx
services/frontend/src/app/dispatch/: page.tsx
services/frontend/src/app/login/: page.tsx
services/frontend/src/app/register/: page.tsx
services/frontend/src/components/: Charts.tsx  DocumentUpload.tsx  Header.tsx  MapComponent.tsx  ThreeBackground.tsx  VoiceAssistantMic.tsx
services/frontend/src/lib/: api.ts
services/matcher/: .dockerignore  CMakeLists.txt  Dockerfile
services/matcher/src/: SpatialTree.cpp  SpatialTree.h  main.cpp
(+1 files in other folders)
